# KnowCode

./: .gitignore  CHANGELOG.md  EVOLUTION.md  KnowCode.md  README.md  README_MCP.md  aimodels.yaml  check_mcp_server.sh  environment_variables.env  mkdocs.yml  pyproject.toml  test_mcp_workflow.md  verify_mcp_connection.sh
.agent/rules/: context.md
.github/workflows/: ci-cd.yml
docs/: MCP_SETUP.md  evolution.md  index.md
docs/api/: knowledge_store.md
knowcode_index/: chunks.json  index_manifest.json  vectors.json
scripts/: evaluate.py  generate_changelog.py
src/knowcode/: __init__.py  background_indexer.py  chunk_repository.py  chunker.py  cli.py  completeness.py  config.py  context_synthesizer.py  data_models.py  embedding.py  graph_builder.py  hybrid_index.py  indexer.py  knowledge_store.py  logger.py  models.py  monitor.py  reranker.py  scanner.py  search_engine.py  service.py  signals.py  temporal.py  token_counter.py  tokenizer.py  vector_store.py
src/knowcode/analysis/: context_synthesizer.py  signals.py  temporal.py
src/knowcode/api/: __init__.py  api.py  main.py
src/knowcode/cli/: __init__.py  cli.py
src/knowcode/indexing/: background_indexer.py  chunker.py  graph_builder.py  indexer.py  monitor.py
src/knowcode/llm/: agent.py  embedding.py  query_classifier.py  rate_limiter.py  voyageai_client.py
tests/: test_agent.py  test_basic.py  test_failover_manual.py  test_full_flow.py  test_rate_limiter_manual.py  test_server_refinement.py  test_signals.py  test_temporal.py  test_token_optimization.py  test_v2_1_core.py  test_v2_1_integration.py
tests/e2e/: test_server_refinement.py  test_usecase2_ide_integration.py
tests/integration/: test_full_flow.py  test_v2_1_integration.py
tests/parsers/: test_java_parser.py  test_javascript_parser.py
tests/unit/: test_temporal.py  test_v2_1_core.py
(+45 files in other folders)
